# handbrake_transcode

./: .gitignore  README.md  app.py  batch_convert_video.py  handbrake_preset_cpu.json  handbrake_preset_gpu.json  plex.json  pyproject.toml  requirements.txt  schema.sql  transcode_dashboard.db
New Folder With Items/: batch_convert_video.py
templates/: index.html
