[project]
name = "handbrake-transcode-dashboard"
version = "0.2.0"
description = "Web dashboard + agent system for batch transcoding with HandBrakeCLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = []

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

# Note: This is a lightweight tool. The agent (batch_convert_video.py)
# deliberately uses only the Python standard library for easy deployment
# on machines that may not have pip access.
